dinoco/tests/ui/fail/cond_wrong_scalar_type.stderr
error[E0277]: the trait bound `&str: ScalarFieldValue<i64>` is not satisfied
  --> tests/ui/fail/cond_wrong_scalar_type.rs:19:55
   |
19 |     let _query = find_many::<User>().cond(|x| x.id.eq("not-an-id"));
   |                                                    -- ^^^^^^^^^^^ the trait `ScalarFieldValue<i64>` is not implemented for `&str`
   |                                                    |
   |                                                    required by a bound introduced by this call
   |
help: the trait `ScalarFieldValue<i64>` is not implemented for `&str`
      but trait `ScalarFieldValue<std::string::String>` is implemented for it
  --> src/model.rs
   |
   | impl ScalarFieldValue<String> for &str {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `std::string::String`, found `i64`
note: required by a bound in `ScalarField::<T>::eq`
  --> src/fields.rs
   |
   |     pub fn eq<V>(self, value: V) -> Expression
   |            -- required by a bound in this associated function
   |     where
   |         V: ScalarFieldValue<T>,
   |            ^^^^^^^^^^^^^^^^^^^ required by this bound in `ScalarField::<T>::eq`
